# video-subtitle-translator

./: .gitignore  README.md  config.example.yaml  config.fast-cpu.example.yaml  config.fast-gpu.example.yaml  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements-local-models.txt  requirements.txt
app/: __init__.py  cli.py  components.py  config.py  cuda.py  exceptions.py  models.py  pipeline.py
app/audio/: __init__.py  extractor.py
app/subtitles/: __init__.py  formatter.py  segment_merger.py  srt_exporter.py
app/transcription/: __init__.py  base.py  faster_whisper_provider.py
app/translation/: __init__.py  base.py  nllb_provider.py
tests/: test_cli_overrides.py  test_components.py  test_faster_whisper_provider.py  test_nllb_provider.py  test_pipeline.py  test_segment_merger.py  test_srt_exporter.py  test_subtitle_formatter.py
